[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/boss/sayori.png" type="Texture" id=1]
[ext_resource path="res://Scripts/boss/Sayori.gd" type="Script" id=2]
[ext_resource path="res://Sounds/boss_land.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 12.0893
height = 49.5886

[node name="Sayori" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4.762 )
shape = SubResource( 1 )

[node name="shootTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.6

[node name="land" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 16.0
bus = "Sound"

[node name="hurtTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
[connection signal="timeout" from="hurtTimer" to="." method="_on_hurtTimer_timeout"]
